# awsm-env

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: cli.rs  env.pest  error.rs  formatters.rs  lib.rs  main.rs  output.rs  parser.rs  providers.rs  resolve.rs  variable.rs
src/output/: claude.rs  codex.rs  env.rs  json.rs  mod.rs  shell.rs
src/provider/: aws_parameter_store.rs  aws_secrets_manager.rs  mod.rs
