[package]
name = "awsm-env"
version = "0.2.3"
edition = "2024"
description = "A lightweight utility for syncing AWS Secrets Manager secrets to environment variables."
documentation = "https://docs.rs/awsm-env"
readme = "README.md"
homepage = "https://github.com/affanshahid/awsm-env"
repository = "https://github.com/affanshahid/awsm-env"
license = "MIT"
keywords = ["aws-secrets-manager", "env", "environment-variable"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.68.0"
aws-sdk-ssm = "1.71.0"
clap = { version = "4.5.34", features = ["derive"] }
indexmap = { version = "2.8.0", features = ["serde"] }
itertools = "0.14.0"
pest = "2.8.0"
pest_derive = "2.8.0"
regex = "1.11.1"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
cargo-husky = {
  version = "1.5.0",
  default-features = false,
  features = [
    "precommit-hook",
    "run-cargo-check",
    "run-cargo-fmt",
  ]
}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
